Add React frontend pages and layout fixes

--- a/src/SupTrus_frontend/package.json
+++ b/src/SupTrus_frontend/package.json
@@ -8,7 +8,9 @@
     "start": "vite --port 3000",
     "prebuild": "dfx generate",
     "build": "tsc && vite build",
-    "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
+    "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\"",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
